fix scrollbar and api error

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,6 @@
 body {
   color: white;
   background-color: #09090B;
-  overflow-x: hidden;
 }
 
 .no-Scrollbar {
